Sat Nov 17 20:54:50 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Remove compatibility code for valgrind <
	  3.3.0, since we reject such old versions at configure time.

Sat Nov 17 00:05:36 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Optimise an unweighted query term which
	  matches all the documents in a subdatabase to use the "MatchAll"
	  postlist.  (ticket#387)

Fri Nov 16 23:36:34 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_weight.cc: New testcase checkstatsweight1 which checks a
	  weight subclass gets the correct values for all the stats.

Fri Nov 16 07:30:18 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Generate a check for compatible _DEBUG
	  settings if built with MSVC.  (ticket#389)

Fri Nov 16 01:28:55 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Improve a couple of comments.

Fri Nov 16 01:25:28 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Implicitly close any unclosed brackets
	  at the end of the query string.  Patch from Sehaj Singh Kalra.
	* tests/queryparsertest.cc: Adjust existing testcases and feature tests.

Thu Nov 15 23:57:10 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_query.cc: Add testcase xor3 to ensure that XOR handles all
	  remaining subqueries running out at the same time.

Thu Nov 15 10:57:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_query.cc: One test here does need a backend, and it seems
	  a more useful category, so drop the "don't need a backend" part from
	  the @brief documentation comment.

Thu Nov 15 09:29:47 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix calculation of 0.0/0.0 in some cases.
	  This then got used as a minimum weight, but it seems this gives -nan
	  (at least on x86-64 Linux) so it may have been harmless in practice.

Thu Nov 15 05:39:47 GMT 2012  Olly Betts <olly@survex.com>
