@@ -131,18 +131,15 @@ TermGenerator::set_termpos(Xapian::termcount termpos)
 string
 TermGenerator::get_description() const
 {
-    string s("Xapian::TermGenerator(");
-    if (internal.get()) {
-	s += "stem=";
-	s += internal->stemmer.get_description();
-	if (internal->stopper) {
-	    s += ", stopper set";
-	}
-	s += ", doc=";
-	s += internal->doc.get_description();
-	s += ", termpos=";
-	s += str(internal->termpos);
+    string s("Xapian::TermGenerator(stem=");
+    s += internal->stemmer.get_description();
+    if (internal->stopper) {
+	s += ", stopper set";
     }
+    s += ", doc=";
+    s += internal->doc.get_description();
+    s += ", termpos=";
+    s += str(internal->termpos);
     s += ")";
     return s;
 }
